--- a/changelog.txt
+++ b/changelog.txt
@@ -108,3 +108,6 @@ fixed R damage calculation
 uses both R1 and R2 for "Auto R" correctly now
 fixed not using second E
 added "Last hit Cannon with Q" Farm option
+
+Update Katarina:
+Improved Combo
