--- a/changelog.txt
+++ b/changelog.txt
@@ -120,3 +120,10 @@ added "Draw W CD" option
 added "Draw Killable with R circle" option
 
 Added Zeri
+
+Update Blitzcrank:
+adjusted Q
+
+Update Kassadin:
+fixed E range
+added "Q last hit all minions" option
