--- a/changelog.txt
+++ b/changelog.txt
@@ -143,3 +143,9 @@ adjusted minion gapclose to support kiting away
 
 02.01.2024
 added Veigar
+
+Update Chogath:
+improved Q prediction
+added "auto R minion" option
+added "auto R objective" option
+made E an AA reset
