--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,8 @@ made E an AA reset
 Update Yone:
 Added "E back on CC" Option
 
+Update Sivir:
+Fixed Spellshield Usage when already evading
 
 
 01.01.2024
