--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 02.01.2024
 Update Davey_Tool:
-Added Mode Indicator
-Changed menu layout
+added Mode Indicator
+changed menu layout
 
 Update Draven:
 fixed axe drawings
