--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,18 @@
+11.01.2024
+Update Blitzcrank:
+changed prediction
+
+Update Master Yi:
+added W AA reset option (turn off "AA Cancel Check Beta" in Orbwalker => Configuration)
+
+Update FiddleSticks:
+fixed E interrupting W when farming
+
+Update Zed:
+fixed crash when not having flash and ignite
+
+
+
 06.01.2024
 Update Zeri:
 fixed farm passive last hit being clunky
